deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: streamflare
spec:
  replicas: 1
  selector:
    matchLabels:
      app: streamflare
  template:
    metadata:
      labels:
        app: streamflare
    spec:
      containers:
        - name: streamflare
          image: streamflare:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 3000

          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"

          readinessProbe:
            httpGet:
              path: /
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 5
