service.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamflare-service
spec:
  type: NodePort
  selector:
    app: streamflare
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      nodePort: 30007
