ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: streamflare-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: streamflare.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: streamflare-service
                port:
                  number: 80
